--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
 [build-system]
 requires = ["setuptools>=42"]
 build-backend = "setuptools.build_meta"
+[project]
+readme = "README.md"
+dynamic = ["version"]
+licenses = ["LICENSE"]
+
