--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [build-system]
 requires = ["setuptools>=42"]
 build-backend = "setuptools.build_meta"
-[project]
-readme = "README.md"
-dynamic = ["version"]
-licenses = ["LICENSE"]
 
+[project]
+name = "mhut"
+dynamic = ["version"]
+
+readme = "README.md"
+licenses = ["LICENSE"]
