--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "mhut"
 version = "1.6.4"
 readme = "README.md"
 license = "MIT"
+license-files = [ "LICENSE", ]
 dependencies = ['numpy', 'pandas', 'pytz']
 authors = [ 
     {name = "Mahmud Hassan"},
